# zed

./: Cargo.toml  DOTNET_DEBUG_TESTING_GUIDE.md  DOTNET_FEATURES_SUMMARY.md  DOTNET_IMPLEMENTATION_SUMMARY.md  DOTNET_MULTIPROJECT_SUPPORT.md  IMPLEMENTATION_COMPLETE.md
.claude/: settings.local.json
crates/dap_adapters/src/: dap_adapters.rs  dotnet.rs
crates/languages/src/: csharp.rs  lib.rs
crates/project/src/debugger/: dap_store.rs  locators.rs
crates/project/src/debugger/locators/: dotnet.rs
crates/solution_explorer/: Cargo.toml
crates/solution_explorer/src/: solution_explorer.rs
crates/zed/: Cargo.toml
crates/zed/src/: zed.rs
crates/zed/src/zed/: app_menus.rs
crates/zed_actions/src/: lib.rs
