[package]
name = "solution_explorer"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[lib]
path = "src/solution_explorer.rs"
doctest = false

[dependencies]
anyhow.workspace = true
collections.workspace = true
db.workspace = true
file_icons.workspace = true
gpui.workspace = true
languages.workspace = true
project.workspace = true
schemars.workspace = true
serde.workspace = true
settings.workspace = true
task.workspace = true
ui.workspace = true
util.workspace = true
workspace.workspace = true
zed_actions.workspace = true

